--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,15 +2,24 @@ name: README Generator
 on:
   push:
     branches: [ main ]
+    # avoid retriggering workflow when only README.md is changed by the action
+    paths-ignore:
+      - 'README.md'
   workflow_dispatch:
 
 jobs:
   update-readme:
+    # request explicit write permissions (helps in org-restricted repos)
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
 
     steps:
       - name: Get Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
       
       - name: Set up python
         uses: actions/setup-python@v5
@@ -19,15 +28,35 @@ jobs:
         
       - name: Run README Generator
         run: python scripts/update_readme.py
-      - name: Commit README if changed
+      - name: Push README to main using PAT (if provided)
+        if: ${{ secrets.GITHUB_PAT != '' }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add README.md || true
           if ! git diff --staged --quiet; then
             git commit -m "chore: update README with new problem(s) - ${{ github.sha }}"
-            git push
+            # set remote to use PAT for authentication
+            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_PAT }}@github.com/${{ github.repository }}.git
+            git push origin HEAD:refs/heads/main
           else
             echo "No README changes to commit"
           fi
+
+      - name: Create PR if README changed
+        if: ${{ secrets.GITHUB_PAT == '' }}
+        # use peter-evans action to commit changes to a branch and open a PR
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: chore: update README with new problem(s) - ${{ github.sha }}
+          committer: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          # use a stable branch so the action updates the same PR instead of creating a new one each run
+          branch: update/readme
+          title: chore: update README with new problem(s)
+          body: |
+            This pull request updates the generated README.md with newly added problem(s).
+          labels: automated, readme
+          paths: README.md
       
